# launchpad-Nova

./: .gitignore  README.md  db.sqlite3  main.py  pyproject.toml  readme.md  video_tests.py
chat_backend/: views.py
chat_backend/utils/: groq_utils.py  vectorstore.py
personalized_learning_coach/: settings.py  urls.py
video/: urls.py  views.py
video/prompts/: animation.txt  code.txt  script.txt  toc.txt
video/utils/: __init__.py  chain1_guide.py  chain2_code.py  helpers.py  response_model.py
